<resources>
    <string name="app_name" comment="Application name for launcher, title on wallet screen">MEWсonnect</string>
    <string name="password" comment="Hint in password input fields">Password</string>
    <string name="decline" comment="Decline button text (transaction)">Decline</string>
    <string name="confirm" comment="Confirm button text (transaction or message sign)">Confirm</string>
    <string name="done" comment="Button to close window after some action like backup or transaction confirmation">Done</string>
    <string name="next" comment="Go to next screen">Next</string>
    <string name="close" comment="Close current screen or dialog">Close</string>
    <string name="cancel" comment="Cancel some action (wallet reset or message signing)">Cancel</string>
    <string name="back_up" comment="Button to make a backup (should be short)">Back up</string>
    <string name="reset_wallet" comment="Button to remove wallet from this device">Reset wallet</string>
    <string name="words_loading_error" comment="Application cannot show mnemonic, error">Cannot load words list</string>
    <string name="enter_recovery_phrase_title" comment="'Enter recovery phrase' screen - title">Enter your\nrecovery phrase</string>
    <string name="enter_recovery_phrase_hint" comment="'Enter recovery phrase' screen - hint">Words separated by spaces</string>
    <string name="enter_recovery_phrase_error" comment="'Enter recovery phrase' screen - error">Wrong recovery phrase</string>
    <string name="restore_existing_wallet_title" comment="'Restore existing wallet' screen - title">Restore\nexisting wallet</string>
    <string name="restore_existing_wallet_use" comment="'Restore existing wallet' screen - button">Use recovery phrase</string>
    <string name="restore_existing_wallet_other" comment="'Restore existing wallet' screen - button">Other options</string>
    <string name="restore_existing_wallet_note" comment="'Restore existing wallet' screen - note">i.e. keystore file, private key etc.</string>
    <string name="do_you_have_phrase_title" comment="'Do you have phrase' screen - title">Do you have your\nrecovery phrase\nhandy?</string>
    <string name="do_you_have_phrase_text" comment="'Do you have phrase' screen - description">Recovery phrase is a 24 word phrase that you wrote down when you backed up your wallet.</string>
    <string name="do_you_have_phrase_continue" comment="'Do you have phrase' screen - button">Continue</string>
    <string name="do_you_have_phrase_other" comment="'Do you have phrase' screen - button">Other options</string>
    <string name="do_you_have_phrase_note" comment="'Do you have phrase' screen - note">i.e. keystore file, private key etc.</string>
    <string name="safety_priority_title" comment="'Safety priority' screen - title">Your safety and\nsecurity is our\n#1 priority</string>
    <string name="safety_priority_text1" comment="'Safety priority' screen - paragraph 1">We don’t support keystore file and private key imports in MEWconnect app, as they are highly unsafe.</string>
    <string name="safety_priority_text2" comment="'Safety priority' screen - paragraph 2">(Note that keystore file and private key are still available methods of access on MyEtherWallet.com, but are not recommended unless using MEW offline)</string>
    <string name="safety_priority_text3" comment="'Safety priority' screen - paragraph 3">Because MEWconnect is a ‘Hardware wallet’ without all the hardware, it\'s best to create a new wallet directly in MEWconnect app, same as if you just got a new hardware wallet. That way you can be sure your keys never leave your device.</string>
    <string name="safety_priority_text4" comment="'Safety priority' screen - paragraph 4">If you want to access funds in one of your existing wallets via MEWconnect, the most secure way to do so would be transferring your ETH and tokens to your new MEWconnect wallet once it’s created.</string>
    <string name="safety_priority_text5" comment="'Safety priority' screen - paragraph 5">Using your existing private key defeats the purpose of MEWconnect, and reduces your security considerably.</string>
    <string name="pick_password_title" comment="'Pick password' screen - title">Pick a\npassword</string>
    <string name="pick_password_description" comment="'Pick password' screen - description part 1">So no one else but you can unlock your wallet.</string>
    <string name="pick_password_description2" comment="'Pick password' screen - description part 2">Best passwords are long and contain letters, numbers and special characters.</string>
    <string name="pick_password_strength_weak" comment="'Pick password' screen - password strength">Weak</string>
    <string name="pick_password_strength_so_so" comment="'Pick password' screen - password strength">So-so</string>
    <string name="pick_password_strength_good" comment="'Pick password' screen - password strength">Good</string>
    <string name="pick_password_strength_great" comment="'Pick password' screen - password strength">Great</string>
    <string name="password_again_title" comment="'Type password again' screen - title">Type your\npassword again</string>
    <string name="password_again_description" comment="'Type password again' screen - description"><![CDATA[There will be <u>NO ‘Restore password’</u> button. Make sure you remember it.]]></string>
    <string name="password_again_error" comment="'Type password again' screen - error">Wrong password</string>
    <string name="lets_double_check_title" comment="'Lets double check' screen - title">Let’s double\ncheck it</string>
    <string name="lets_double_check_description" comment="'Lets double check' screen - description">Once you finish, you won’t be able to view your recovery phrase again.</string>
    <string name="lets_double_check_item_title" comment="'Lets double check' screen - row title">Select word #%d</string>
    <string name="prepare_write_title" comment="'Prepare to write down' screen - title">Prepare to write down your recovery phrase</string>
    <string name="prepare_write_description" comment="'Prepare to write down' screen - description">If your device gets lost or stolen, you can restore your wallet using your recovery phrase. Get pen and paper before you start.</string>
    <string name="prepare_write_confirm" comment="'Prepare to write down' screen - button">Start</string>
    <string name="intro_by_mew_label" comment="Intro screen - company">by MyEtherWallet</string>
    <string name="intro_verify" comment="Intro screen - button">Verify</string>
    <string name="intro_restore_wallet" comment="Intro screen - button">Restore wallet</string>
    <string name="intro_setup" comment="Intro screen - button">CREATE NEW WALLET</string>
    <string name="intro_page_footer1" comment="Intro screen - description">Finally, a ‘hardware wallet’\nwithout all the hardware.\nOfficially by MyEtherWallet.</string>
    <string name="intro_page_footer2" comment="Intro screen - description"><b>Secure</b> your every\nMyEtherWallet\ntransaction with two-\nfactor verification.</string>
    <string name="intro_page_footer3" comment="Intro screen - description"><b>Store</b> your private keys\nsafely in a local isolated\nsecure vault on your\ndevice.</string>
    <string name="intro_page_footer4" comment="Intro screen - description"><b>Protect</b> yourself from\nphishers and malware.\nNo one can obtain\nyour private key.</string>
    <string name="intro_page_footer5" comment="Intro screen - description">No data collection:\nMyEtherWallet can\'t\ncollect your personal data\neven if we wanted to.</string>
    <string name="intro_page_footer6" comment="Intro screen - description">No centralized servers, no\ndatabases.\nMEWconnect and\nMyEtherWallet talk via\nP2P communication.</string>
    <string name="intro_page_footer7" comment="Intro screen - description">Transparent, free and\nopen source. Audited by\nthe community.</string>
    <string name="generating_start_animation_text1" comment="'Generating animation' screen - text"><![CDATA[Generating your<br/><font color="#064dd6">Ethereum address</font>]]></string>
    <string name="generating_start_animation_text2" comment="'Generating animation' screen - text"><![CDATA[Encrypting your<br/><font color="#064dd6">private key</font> using<br/>your password]]></string>
    <string name="generating_start_animation_text3" comment="'Generating animation' screen - text"><![CDATA[Saving your<br/>encrypted keys to a<br/><font color="#064dd6">local secure vault</font><br/>on this device]]></string>
    <string name="generating_start_animation_text4" comment="'Generating animation' screen - text"><![CDATA[<font color="#064dd6">All done!</font>]]></string>
    <string name="generating_start_using" comment="'Generating animation' screen - button">Start using MEWconnect</string>
    <string name="wallet_toolbar_buy_ether" comment="Wallet card - toolbar button hint">Buy ether</string>
    <string name="wallet_header_balances_title" comment="Wallet card - tokens list header">Tokens</string>
    <string name="wallet_network_title" comment="Network selection dialog title">Select network</string>
    <string name="wallet_network_main_full" comment="Network selection dialog item">Main Ethereum Network</string>
    <string name="wallet_network_ropsten_full" comment="Network selection dialog item">Ropsten Test Network</string>
    <string name="wallet_network_main_short" comment="Wallet screen toolbar - network">Mainnet</string>
    <string name="wallet_network_ropsten_short" comment="Wallet screen - network">Ropsten</string>
    <string name="transaction_confirmed_title" comment="'Transaction confirmed' screen - title">Continue in your browser</string>
    <string name="transaction_confirmed_description" comment="'Transaction confirmed' screen - description">Transaction is generated and signed. Please continue in MyEtherWallet in your browser in order to send it.</string>
    <string name="forgot_password_title" comment="'Forgot password' screen - title">Forgot password?</string>
    <string name="forgot_password_description" comment="'Forgot password' screen - description">Unfortunately, as we mentioned when you were creating a password, there’s no ‘Restore Password’ button, however, if you created a backup for your wallet, you can restore your wallet using a backup passphrase and set a new password once it’s restored.</string>
    <string name="forgot_password_restore_wallet" comment="'Forgot password' screen - button">Restore wallet</string>
    <string name="info_title" comment="Info screen - title">Info</string>
    <string name="info_contact" comment="Info screen - button">Contact support</string>
    <string name="info_user_guide" comment="Info screen - button">User guide</string>
    <string name="info_knowledge_base" comment="Info screen - button">Knowledge base</string>
    <string name="info_site" comment="Info screen - button">MyEtherWallet.com</string>
    <string name="info_privacy_and_terms" comment="Info screen - button">Privacy and terms</string>
    <string name="info_copyright" comment="Info screen - copyright">Copyright 2018 MyEtherWallet Inc.</string>
    <string name="fingerprint_available_title" comment="Fingerprint available screen - title">Fingerprint unlock is now available</string>
    <string name="fingerprint_available_description1" comment="Fingerprint available screen - text">We added biometric authentication to MEWconnect, so you can access your account much faster, and with the same level of security.</string>
    <string name="fingerprint_available_description2" comment="Fingerprint available screen - text">You can enable it now or set it up later in Info section of the app.</string>
    <string name="fingerprint_available_enable" comment="Fingerprint available screen - button">Enable Fingerprint Unlock</string>
    <string name="fingerprint_available_set_up_later" comment="Fingerprint available screen - cancel">Set up later</string>
</resources>