<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <com.myetherwallet.mewconnect.core.ui.view.StaticToolbar
        android:id="@+id/safety_priority_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/safety_priority_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/safety_priority_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="-8sp"
                android:text="@string/safety_priority_title"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/safety_priority_text1"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/safety_priority_text2"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/safety_priority_text3"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/safety_priority_text4"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/safety_priority_text5"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>