<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <com.myetherwallet.mewconnect.core.ui.view.StaticToolbar
        android:id="@+id/restore_existing_wallet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:lineSpacingExtra="-8sp"
        android:text="@string/restore_existing_wallet_title"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_40sp"
        android:textStyle="bold" />

    <android.support.design.button.MaterialButton
        android:id="@+id/restore_existing_wallet_use"
        style="@style/Button.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        android:text="@string/restore_existing_wallet_use" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:background="@color/separator" />

    <TextView
        android:id="@+id/restore_existing_wallet_other"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_36dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        android:text="@string/restore_existing_wallet_other"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="4sp"
        android:text="@string/restore_existing_wallet_note"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/text_size_12sp" />
</LinearLayout>