<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <com.myetherwallet.mewconnect.core.ui.view.StaticToolbar
        android:id="@+id/info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/static_toolbar_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/info_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:includeFontPadding="false"
                android:text="@string/info_title"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_contact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp"
                android:text="@string/info_contact"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/info_user_guide"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp"
                android:text="@string/info_user_guide"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/info_knowledge_base"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp"
                android:text="@string/info_knowledge_base"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/info_privacy_and_terms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp"
                android:text="@string/info_privacy_and_terms"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/info_site"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:paddingStart="@dimen/dimen_24dp"
                android:paddingEnd="@dimen/dimen_24dp"
                android:text="@string/info_site"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_size"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@color/separator" />

            <TextView
                android:id="@+id/info_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:letterSpacing="0.03"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_12sp"
                tools:text="Version 21.4.17" />

            <TextView
                android:id="@+id/info_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:letterSpacing="0.03"
                android:text="@string/info_copyright"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:id="@+id/info_reset_wallet"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_36dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.09"
                android:paddingStart="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_8dp"
                android:text="@string/reset_wallet"
                android:textAllCaps="true"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>