<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <com.myetherwallet.mewconnect.core.ui.view.StaticToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/static_toolbar_height" />

    <TextView
        android:id="@+id/transaction_confirmed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:text="@string/transaction_confirmed_title"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="@dimen/text_size_12sp"
        android:text="@string/transaction_confirmed_description"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.design.button.MaterialButton
        android:id="@+id/transaction_confirmed_close"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:text="@string/done" />
</LinearLayout>