<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <com.myetherwallet.mewconnect.core.ui.view.StaticToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/static_toolbar_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_title"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="12sp"
                android:text="@string/forgot_password_description"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/forgot_password_reset_wallet"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_36dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.09"
                android:lineSpacingExtra="2sp"
                android:text="@string/reset_wallet"
                android:textAllCaps="true"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.design.button.MaterialButton
                    android:id="@+id/forgot_password_restore_wallet"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:paddingStart="@dimen/dimen_24dp"
                    android:paddingEnd="@dimen/dimen_24dp"
                    android:text="@string/forgot_password_restore_wallet" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>